# test-customer-service-automation

./: README.md  pyproject.toml
customer_service/: constants.py  customer_service.py  openai_client.py
